# code

lane_follow_pnc/: CMakeLists.txt  readme.md
lane_follow_pnc/include/: common.h  point_types.h
lane_follow_pnc/src/: CMakeLists.txt  common.cpp  main.cpp  test.cc
lane_follow_pnc/src/collision_detection/: collision_detection.cpp
lane_follow_pnc/src/data/: CubeTown.txt  CubeTown1.txt  dp_interpolation.txt  dp_path.fig  dp_path.txt  draw.emf  draw.m  draw_path.m  draw_referenceline.m  qp_path.fig  qp_path.txt  smooth.txt  smooth_referenceline.fig  smooth_v1.fig
lane_follow_pnc/src/em_planner/: em_planner.cpp
lane_follow_pnc/src/reference_line/: reference_line.cpp
多工况下的质心侧偏角预测/: processing_dataset.ipynb
多工况下的质心侧偏角预测/.ipynb_checkpoints/: processing_dataset-checkpoint.ipynb  基于数据驱动的多工况车辆质心侧偏角估计-checkpoint.ipynb
多工况下的质心侧偏角预测/dataset/: 01handing_sport_dataset.csv  02handing_normal_dataset.csv  03Double lane change_sport_dataset.csv  04Double lane change_normal_dataset.csv  05sine-sweep_normal_dataset.csv  06sine-sweep_sport_dataset.csv  07sine steer_sport_dataset.csv  08sine steer_normal_dataset.csv  09step steer_sport_dataset.csv  10step steer_normal_dataset.csv  11steady state corner_sport_dataset.csv  12steady state corner_normal_dataset.csv  13Acceleration barking_sport_dataset.csv  14Acceleration barking_normal_dataset.csv  train_data.csv
多工况下的质心侧偏角预测/logs/: events.out.tfevents.1655283951.DESKTOP-CR79AHE.9688.0  events.out.tfevents.1655284036.DESKTOP-CR79AHE.9688.1  events.out.tfevents.1655284065.DESKTOP-CR79AHE.9688.2  (+4 more)
(+5 files in other folders)
